Abstract Factory Completed

--- a/DesignPattern/AbstractFactoryPattern/AbstractFactoryPattern.csproj
+++ b/DesignPattern/AbstractFactoryPattern/AbstractFactoryPattern.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ComputerShop\ComputerShop.csproj">
+      <Project>{41D8AA1D-EAD3-4998-8BE0-04872DD3FF1D}</Project>
+      <Name>ComputerShop</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
